# planton

./: .bazelproject  .bazelrc  .cursorignore  .cursorindexingignore  .env.test  .gitignore  .goreleaser.yaml  BUILD.bazel  CHANGELOG.md  CODE-OF-CONDUCT.md  CONTRIBUTING.md  MODULE.bazel  Makefile  README.md  bazel-planton-copy  go.mod  go.sum  go.work  go.work.sum  main.go
apis/: .gitignore  (+3 more)
apis/dev/planton/shared/: BUILD.bazel  iac.pb.go  iac.proto  metadata.pb.go  metadata.proto
apis/dev/planton/shared/cloudresourcekind/: BUILD.bazel  cloud_resource_kind.pb.go  cloud_resource_kind.proto  cloud_resource_provider.pb.go  cloud_resource_provider.proto  kubernetes.pb.go  kubernetes.proto
apis/dev/planton/shared/foreignkey/v1/: BUILD.bazel  foreign_key.pb.go  foreign_key.proto  foreign_key_consumer_test.go  foreign_key_test.go
apis/dev/planton/shared/gcp/: BUILD.bazel  gcp.pb.go  gcp.proto
apis/dev/planton/shared/options/: BUILD.bazel  options.pb.go  options.proto
apis/dev/planton/shared/validateutil/: BUILD.bazel
app/backend/internal/service/: BUILD.bazel  credential_resolver.go  credential_service.go  stack_update_service.go
cmd/openmcf/: BUILD.bazel  README.md  root.go
cmd/openmcf/root/: BUILD.bazel  credential_create.go  credential_get.go  credential_update.go  e2e.go  init.go  kustomize.go  secret_coverage.go  tofu.go  validate_outputs.go  validate_refs.go
cmd/openmcf/root/e2e/: BUILD.bazel  discover.go
cmd/openmcf/root/kustomize/: BUILD.bazel  init_cmd.go  schema.go
cmd/openmcf/root/pulumi/: README.md
cmd/openmcf/root/terraform/: init.go
cmd/openmcf/root/tofu/: BUILD.bazel  generate_module.go  generate_variables.go  init.go  load_tfvars.go
cmd/planton/: BUILD.bazel  README.md  root.go
cmd/planton/root/: BUILD.bazel  apply.go  checkout.go  destroy.go  downgrade.go  e2e.go  init.go  kustomize.go  load_manifest.go  modules_version.go  plan.go  pull.go  pulumi.go  refresh.go  register.go  register_test.go  secret_coverage.go  terraform.go  tofu.go  upgrade.go  validate_manifest.go  validate_outputs.go  validate_refs.go  version.go
cmd/planton/root/e2e/: BUILD.bazel  discover.go
cmd/planton/root/kustomize/: BUILD.bazel  init_cmd.go  schema.go
cmd/planton/root/pulumi/: BUILD.bazel  README.md  cancel.go  delete.go  destroy.go  init.go  preview.go  refresh.go  update.go
cmd/planton/root/terraform/: BUILD.bazel  apply.go  destroy.go  init.go  plan.go  refresh.go
cmd/planton/root/tofu/: BUILD.bazel  README.md  apply.go  destroy.go  generate_module.go  generate_variables.go  init.go  load_tfvars.go  plan.go  refresh.go
e2e/framework/provider/kubernetes/: BUILD.bazel  harness.go  verify.go
e2e/framework/reporter/: BUILD.bazel  reporter.go
e2e/framework/runner/: BUILD.bazel  dependencies.go  dependencies_test.go  fixtures.go  outputs_verifier.go  outputs_verifier_test.go  pulumi.go  refresolve.go  refresolve_test.go  runner.go  stackinput.go  terraform.go  terraform_input.go
internal/cli/iacrunner/: BUILD.bazel  backend_config.go  context.go  resolve_context.go  run_pulumi.go  run_terraform.go  run_tofu.go
internal/cli/manifest/: BUILD.bazel  clipboard_content.go  clipboard_errors.go  resolve_from_clipboard.go  resolve_from_stack_input.go  resolver.go
internal/cli/prompt/: BUILD.bazel  backend.go  provisioner.go
internal/cli/ui/: BUILD.bazel  backend.go  clipboard.go
internal/cli/ui/e2ediscover/: BUILD.bazel  interactive.go  table.go
internal/cli/ui/validateoutputs/: BUILD.bazel  render.go
internal/cli/upgrade/: BUILD.bazel  direct.go  homebrew.go  platform.go  upgrade.go  version.go
internal/manifest/protodefaults/: BUILD.bazel  README.md  applier.go  applier_test.go  type_converter_test.go
pkg/crkreflect/: BUILD.bazel  get_provider.go  group_version.go  id_prefix.go  kind_by_id_prefix.go  kind_by_id_prefix_test.go  kind_by_kind_name.go  kind_from_string.go  kind_from_string_test.go  kind_from_yaml.go  kind_map_gen.go  kind_meta.go  kind_name_by_kind.go  kind_to_kind_meta_map.go  kinds_list.go  new_instance.go  prerequisites.go  prerequisites_test.go  provider_meta.go  providers_list.go
pkg/crkreflect/codegen/: BUILD.bazel  main.go
pkg/e2e/profile/: BUILD.bazel  discover.go  doc.go  loader.go  paths.go
pkg/iac/stackinput/: BUILD.bazel  extract_manifest.go  extract_manifest_bytes.go  providers.go  stack_input.go
pkg/iac/stackinput/providerdetect/: BUILD.bazel  detect.go  guidance.go  validate.go
pkg/iac/stackinput/providerenvvars/: BUILD.bazel  alicloud.go  atlas.go  auth0.go  aws.go  aws_test.go  awsprovidertf_guard_test.go  azure.go  cloudflare.go  confluent.go  gcp.go  gcp_test.go  hetznercloud.go  kubernetes.go  kubernetes_test.go  loader.go  oci.go  openfga.go  openstack.go  proto_loader.go  scaleway.go  snowflake.go
pkg/iac/stackinput/stackinputproviderconfig/: BUILD.bazel  backend_options.go  unified_options.go
pkg/kustomize/initializer/: BUILD.bazel  init.go
pkg/kustomize/schema/: BUILD.bazel  generator.go  generator_test.go
pkg/outputs/: BUILD.bazel  conformance_test.go  discover.go  discover_test.go  executable.go  executable_test.go  flatten.go  flatten_test.go  mapping.go  mapping_test.go  populate.go  populate_test.go  preprocess.go  preprocess_test.go  resolve.go  resolve_test.go  scalar.go  scalar_test.go  transform.go  transform_raw.go  transform_raw_test.go  transform_test.go  validate.go  validate_test.go
pkg/outputs/testdata/modules/bad-executable/: transform-outputs
pkg/outputs/testdata/modules/bad-mapping/: output_transform.yaml
pkg/outputs/testdata/modules/with-both/: output_transform.yaml  transform-outputs
pkg/outputs/testdata/modules/with-executable/: transform-outputs
pkg/outputs/testdata/modules/with-mapping/: output_transform.yaml
pkg/refcheck/: BUILD.bazel  analyze.go  analyze_test.go
pkg/reflection/metadatareflect/: BUILD.bazel  extract_metadata.go  extract_metadata_test.go  inject_metadata.go  inject_metadata_test.go
pkg/secretcoverage/: BUILD.bazel  analyze.go  baseline.go  baseline.yaml  coverage_test.go  heuristic.go  heuristic_test.go  report.go  report_test.go
(+25405 files in other folders)
