module(
    name = "openmcf",
)

# ─── Go rules + Gazelle ──────────────────────────────────────────────────────
bazel_dep(name = "rules_go", version = "0.59.0")
bazel_dep(name = "gazelle", version = "0.47.0")

# Pin the Go toolchain Bazel uses (hermetic; no host Go required)
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.25.0")
go_sdk.nogo(nogo = "//:openmcf_nogo")

# Read Go deps from this repo's go.mod (bzlmod-friendly)
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
go_deps.module(
    path = "buf.build/go/protovalidate",
    sum = "h1:pQqEQRpOo4SqS60qkvmhLTTQU9JwzEvdyiqAtXa5SeY=",
    version = "v1.1.0",
)
go_deps.module(
    path = "golang.org/x/tools",
    sum = "h1:yLkxfA+Qnul4cs9QA3KnlFu0lVmd8JJfoq+E41uSutA=",
    version = "v0.40.0",
)
use_repo(
    go_deps,
    "build_buf_gen_go_bufbuild_protovalidate_protocolbuffers_go",
    "build_buf_go_protovalidate",
    "com_github_aws_aws_sdk_go_v2",
    "com_github_aws_aws_sdk_go_v2_config",
    "com_github_aws_aws_sdk_go_v2_credentials",
    "com_github_aws_aws_sdk_go_v2_service_ec2",
    "com_github_aws_aws_sdk_go_v2_service_s3",
    "com_github_aws_aws_sdk_go_v2_service_sts",
    "com_github_aws_smithy_go",
    "com_github_blang_semver",
    "com_github_charmbracelet_bubbletea",
    "com_github_charmbracelet_lipgloss",
    "com_github_fatih_color",
    "com_github_google_uuid",
    "com_github_gruntwork_io_terratest",
    "com_github_hashicorp_hcl_v2",
    "com_github_iancoleman_strcase",
    "com_github_masterminds_sprig",
    "com_github_oklog_ulid_v2",
    "com_github_onsi_ginkgo_v2",
    "com_github_onsi_gomega",
    "com_github_pkg_errors",
    "com_github_pseudomuto_protoc_gen_doc",
    "com_github_pulumi_pulumi_alicloud_sdk_v3",
    "com_github_pulumi_pulumi_auth0_sdk_v3",
    "com_github_pulumi_pulumi_aws_native_sdk",
    "com_github_pulumi_pulumi_aws_sdk_v7",
    "com_github_pulumi_pulumi_azure_native_sdk_compute_v3",
    "com_github_pulumi_pulumi_azure_native_sdk_containerregistry_v3",
    "com_github_pulumi_pulumi_azure_native_sdk_containerservice_v3",
    "com_github_pulumi_pulumi_azure_native_sdk_network_v3",
    "com_github_pulumi_pulumi_azure_native_sdk_v3",
    "com_github_pulumi_pulumi_azure_sdk_v5",
    "com_github_pulumi_pulumi_azure_sdk_v6",
    "com_github_pulumi_pulumi_civo_sdk_v2",
    "com_github_pulumi_pulumi_cloudflare_sdk_v6",
    "com_github_pulumi_pulumi_confluentcloud_sdk_v2",
    "com_github_pulumi_pulumi_digitalocean_sdk_v4",
    "com_github_pulumi_pulumi_gcp_sdk_v9",
    "com_github_pulumi_pulumi_hcloud_sdk",
    "com_github_pulumi_pulumi_kubernetes_sdk_v4",
    "com_github_pulumi_pulumi_mongodbatlas_sdk_v3",
    "com_github_pulumi_pulumi_oci_sdk_v4",
    "com_github_pulumi_pulumi_openstack_sdk_v5",
    "com_github_pulumi_pulumi_random_sdk_v4",
    "com_github_pulumi_pulumi_sdk_v3",
    "com_github_pulumi_pulumi_snowflake_sdk_v2",
    "com_github_pulumi_pulumi_tls_sdk_v4",
    "com_github_pulumi_pulumi_tls_sdk_v5",
    "com_github_pulumiverse_pulumi_scaleway_sdk",
    "com_github_sirupsen_logrus",
    "com_github_spf13_cobra",
    "com_github_spf13_pflag",
    "com_github_stretchr_testify",
    "com_github_zyedidia_clipboard",
    "in_gopkg_yaml_v3",
    "io_k8s_api",
    "io_k8s_sigs_kustomize_api",
    "io_k8s_sigs_kustomize_kyaml",
    "io_k8s_sigs_yaml",
    "io_k8s_utils",
    "org_golang_google_protobuf",
    "org_golang_x_term",
    "org_golang_x_tools",
)

# ─── Java rules (for Java stub compilation check) ────────────────────────────
# Generated Java protobuf stubs are compiled as a build-time gate to catch
# reserved keyword conflicts (e.g., "public", "class") before they reach
# downstream consumers.
bazel_dep(name = "rules_jvm_external", version = "6.9")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "maven",
    artifacts = [
        "javax.annotation:javax.annotation-api:1.3.2",
        "com.google.protobuf:protobuf-java:4.30.1",
        "io.grpc:grpc-api:1.66.0",
        "io.grpc:grpc-stub:1.66.0",
        "io.grpc:grpc-protobuf:1.66.0",
        "build.buf:protovalidate:1.0.0",
        "com.google.guava:guava:33.4.0-jre",
    ],
    repositories = ["https://repo.maven.apache.org/maven2"],
)
use_repo(maven, "maven")

# NOTE: Run `bazel mod tidy` to expand the required use_repo(...) entries below.
# Bazel will add the repositories provided by the extensions above.
