load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "crkreflect",
    srcs = [
        "get_provider.go",
        "group_version.go",
        "id_prefix.go",
        "id_prefix_from_id.go",
        "kind_by_id_prefix.go",
        "kind_by_kind_name.go",
        "kind_extractor.go",
        "kind_from_string.go",
        "kind_from_yaml.go",
        "kind_map_gen.go",
        "kind_meta.go",
        "kind_name_by_kind.go",
        "kind_to_kind_meta_map.go",
        "kinds_list.go",
        "new_instance.go",
        "prerequisites.go",
        "provider_meta.go",
        "providers_list.go",
    ],
    importpath = "github.com/plantonhq/openmcf/pkg/crkreflect",
    visibility = ["//visibility:public"],
    deps = [
        "//apis/org/openmcf/provider/_test/testcloudresourcegeneric/v1:testcloudresourcegeneric",
        "//apis/org/openmcf/provider/_test/testcloudresourcekubernetes/v1:testcloudresourcekubernetes",
        "//apis/org/openmcf/provider/alicloud/alicloudapplicationloadbalancer/v1:alicloudapplicationloadbalancer",
        "//apis/org/openmcf/provider/alicloud/alicloudcdndomain/v1:alicloudcdndomain",
        "//apis/org/openmcf/provider/alicloud/alicloudceninstance/v1:alicloudceninstance",
        "//apis/org/openmcf/provider/alicloud/alicloudcontainerregistry/v1:alicloudcontainerregistry",
        "//apis/org/openmcf/provider/alicloud/aliclouddnsrecord/v1:aliclouddnsrecord",
        "//apis/org/openmcf/provider/alicloud/aliclouddnszone/v1:aliclouddnszone",
        "//apis/org/openmcf/provider/alicloud/alicloudecsinstance/v1:alicloudecsinstance",
        "//apis/org/openmcf/provider/alicloud/alicloudeipaddress/v1:alicloudeipaddress",
        "//apis/org/openmcf/provider/alicloud/alicloudfunction/v1:alicloudfunction",
        "//apis/org/openmcf/provider/alicloud/alicloudkmskey/v1:alicloudkmskey",
        "//apis/org/openmcf/provider/alicloud/alicloudkubernetescluster/v1:alicloudkubernetescluster",
        "//apis/org/openmcf/provider/alicloud/alicloudkubernetesnodepool/v1:alicloudkubernetesnodepool",
        "//apis/org/openmcf/provider/alicloud/alicloudlogproject/v1:alicloudlogproject",
        "//apis/org/openmcf/provider/alicloud/alicloudmongodbinstance/v1:alicloudmongodbinstance",
        "//apis/org/openmcf/provider/alicloud/alicloudnasfilesystem/v1:alicloudnasfilesystem",
        "//apis/org/openmcf/provider/alicloud/alicloudnatgateway/v1:alicloudnatgateway",
        "//apis/org/openmcf/provider/alicloud/alicloudnetworkloadbalancer/v1:alicloudnetworkloadbalancer",
        "//apis/org/openmcf/provider/alicloud/alicloudpolardbcluster/v1:alicloudpolardbcluster",
        "//apis/org/openmcf/provider/alicloud/alicloudprivatednszone/v1:alicloudprivatednszone",
        "//apis/org/openmcf/provider/alicloud/alicloudrampolicy/v1:alicloudrampolicy",
        "//apis/org/openmcf/provider/alicloud/alicloudramrole/v1:alicloudramrole",
        "//apis/org/openmcf/provider/alicloud/alicloudrdsinstance/v1:alicloudrdsinstance",
        "//apis/org/openmcf/provider/alicloud/alicloudredisinstance/v1:alicloudredisinstance",
        "//apis/org/openmcf/provider/alicloud/alicloudrocketmqinstance/v1:alicloudrocketmqinstance",
        "//apis/org/openmcf/provider/alicloud/alicloudsaeapplication/v1:alicloudsaeapplication",
        "//apis/org/openmcf/provider/alicloud/alicloudsecuritygroup/v1:alicloudsecuritygroup",
        "//apis/org/openmcf/provider/alicloud/alicloudstoragebucket/v1:alicloudstoragebucket",
        "//apis/org/openmcf/provider/alicloud/alicloudvpc/v1:alicloudvpc",
        "//apis/org/openmcf/provider/alicloud/alicloudvpngateway/v1:alicloudvpngateway",
        "//apis/org/openmcf/provider/alicloud/alicloudvswitch/v1:alicloudvswitch",
        "//apis/org/openmcf/provider/atlas/atlasmongodb/v1:atlasmongodb",
        "//apis/org/openmcf/provider/auth0/auth0action/v1:auth0action",
        "//apis/org/openmcf/provider/auth0/auth0client/v1:auth0client",
        "//apis/org/openmcf/provider/auth0/auth0connection/v1:auth0connection",
        "//apis/org/openmcf/provider/auth0/auth0eventstream/v1:auth0eventstream",
        "//apis/org/openmcf/provider/auth0/auth0resourceserver/v1:auth0resourceserver",
        "//apis/org/openmcf/provider/auth0/auth0role/v1:auth0role",
        "//apis/org/openmcf/provider/aws/awsalb/v1:awsalb",
        "//apis/org/openmcf/provider/aws/awsapprunnerservice/v1:awsapprunnerservice",
        "//apis/org/openmcf/provider/aws/awsathenaworkgroup/v1:awsathenaworkgroup",
        "//apis/org/openmcf/provider/aws/awsbatchcomputeenvironment/v1:awsbatchcomputeenvironment",
        "//apis/org/openmcf/provider/aws/awscertmanagercert/v1:awscertmanagercert",
        "//apis/org/openmcf/provider/aws/awsclientvpn/v1:awsclientvpn",
        "//apis/org/openmcf/provider/aws/awscloudfront/v1:awscloudfront",
        "//apis/org/openmcf/provider/aws/awscloudwatchalarm/v1:awscloudwatchalarm",
        "//apis/org/openmcf/provider/aws/awscloudwatchloggroup/v1:awscloudwatchloggroup",
        "//apis/org/openmcf/provider/aws/awscodebuildproject/v1:awscodebuildproject",
        "//apis/org/openmcf/provider/aws/awscodepipeline/v1:awscodepipeline",
        "//apis/org/openmcf/provider/aws/awscognitoidentityprovider/v1:awscognitoidentityprovider",
        "//apis/org/openmcf/provider/aws/awscognitouserpool/v1:awscognitouserpool",
        "//apis/org/openmcf/provider/aws/awsdocumentdb/v1:awsdocumentdb",
        "//apis/org/openmcf/provider/aws/awsdynamodb/v1:awsdynamodb",
        "//apis/org/openmcf/provider/aws/awsec2instance/v1:awsec2instance",
        "//apis/org/openmcf/provider/aws/awsecrrepo/v1:awsecrrepo",
        "//apis/org/openmcf/provider/aws/awsecscluster/v1:awsecscluster",
        "//apis/org/openmcf/provider/aws/awsecsservice/v1:awsecsservice",
        "//apis/org/openmcf/provider/aws/awsegressonlyinternetgateway/v1:awsegressonlyinternetgateway",
        "//apis/org/openmcf/provider/aws/awsekscluster/v1:awsekscluster",
        "//apis/org/openmcf/provider/aws/awseksnodegroup/v1:awseksnodegroup",
        "//apis/org/openmcf/provider/aws/awselasticfilesystem/v1:awselasticfilesystem",
        "//apis/org/openmcf/provider/aws/awselasticip/v1:awselasticip",
        "//apis/org/openmcf/provider/aws/awseventbridgebus/v1:awseventbridgebus",
        "//apis/org/openmcf/provider/aws/awseventbridgerule/v1:awseventbridgerule",
        "//apis/org/openmcf/provider/aws/awsfsxlustrefilesystem/v1:awsfsxlustrefilesystem",
        "//apis/org/openmcf/provider/aws/awsfsxontapfilesystem/v1:awsfsxontapfilesystem",
        "//apis/org/openmcf/provider/aws/awsfsxontapstoragevirtualmachine/v1:awsfsxontapstoragevirtualmachine",
        "//apis/org/openmcf/provider/aws/awsfsxontapvolume/v1:awsfsxontapvolume",
        "//apis/org/openmcf/provider/aws/awsfsxopenzfsfilesystem/v1:awsfsxopenzfsfilesystem",
        "//apis/org/openmcf/provider/aws/awsfsxwindowsfilesystem/v1:awsfsxwindowsfilesystem",
        "//apis/org/openmcf/provider/aws/awsglobalaccelerator/v1:awsglobalaccelerator",
        "//apis/org/openmcf/provider/aws/awsgluecatalogdatabase/v1:awsgluecatalogdatabase",
        "//apis/org/openmcf/provider/aws/awshttpapigateway/v1:awshttpapigateway",
        "//apis/org/openmcf/provider/aws/awsiamoidcprovider/v1:awsiamoidcprovider",
        "//apis/org/openmcf/provider/aws/awsiamrole/v1:awsiamrole",
        "//apis/org/openmcf/provider/aws/awsiamuser/v1:awsiamuser",
        "//apis/org/openmcf/provider/aws/awsinternetgateway/v1:awsinternetgateway",
        "//apis/org/openmcf/provider/aws/awskinesisfirehose/v1:awskinesisfirehose",
        "//apis/org/openmcf/provider/aws/awskinesisstream/v1:awskinesisstream",
        "//apis/org/openmcf/provider/aws/awskinesisstreamconsumer/v1:awskinesisstreamconsumer",
        "//apis/org/openmcf/provider/aws/awskmskey/v1:awskmskey",
        "//apis/org/openmcf/provider/aws/awslambda/v1:awslambda",
        "//apis/org/openmcf/provider/aws/awsmemcachedelasticache/v1:awsmemcachedelasticache",
        "//apis/org/openmcf/provider/aws/awsmemorydbcluster/v1:awsmemorydbcluster",
        "//apis/org/openmcf/provider/aws/awsmskcluster/v1:awsmskcluster",
        "//apis/org/openmcf/provider/aws/awsmwaaenvironment/v1:awsmwaaenvironment",
        "//apis/org/openmcf/provider/aws/awsnatgateway/v1:awsnatgateway",
        "//apis/org/openmcf/provider/aws/awsneptunecluster/v1:awsneptunecluster",
        "//apis/org/openmcf/provider/aws/awsnetworkloadbalancer/v1:awsnetworkloadbalancer",
        "//apis/org/openmcf/provider/aws/awsopensearchdomain/v1:awsopensearchdomain",
        "//apis/org/openmcf/provider/aws/awsrdscluster/v1:awsrdscluster",
        "//apis/org/openmcf/provider/aws/awsrdsinstance/v1:awsrdsinstance",
        "//apis/org/openmcf/provider/aws/awsrediselasticache/v1:awsrediselasticache",
        "//apis/org/openmcf/provider/aws/awsredshiftcluster/v1:awsredshiftcluster",
        "//apis/org/openmcf/provider/aws/awsroute53dnsrecord/v1:awsroute53dnsrecord",
        "//apis/org/openmcf/provider/aws/awsroute53zone/v1:awsroute53zone",
        "//apis/org/openmcf/provider/aws/awss3bucket/v1:awss3bucket",
        "//apis/org/openmcf/provider/aws/awss3objectset/v1:awss3objectset",
        "//apis/org/openmcf/provider/aws/awssagemakerdomain/v1:awssagemakerdomain",
        "//apis/org/openmcf/provider/aws/awssecretsmanager/v1:awssecretsmanager",
        "//apis/org/openmcf/provider/aws/awssecuritygroup/v1:awssecuritygroup",
        "//apis/org/openmcf/provider/aws/awsserverlesselasticache/v1:awsserverlesselasticache",
        "//apis/org/openmcf/provider/aws/awssnstopic/v1:awssnstopic",
        "//apis/org/openmcf/provider/aws/awssqsqueue/v1:awssqsqueue",
        "//apis/org/openmcf/provider/aws/awsstepfunction/v1:awsstepfunction",
        "//apis/org/openmcf/provider/aws/awssubnet/v1:awssubnet",
        "//apis/org/openmcf/provider/aws/awstransitgateway/v1:awstransitgateway",
        "//apis/org/openmcf/provider/aws/awsvpc/v1:awsvpc",
        "//apis/org/openmcf/provider/aws/awswafwebacl/v1:awswafwebacl",
        "//apis/org/openmcf/provider/azure/azureakscluster/v1:azureakscluster",
        "//apis/org/openmcf/provider/azure/azureaksnodepool/v1:azureaksnodepool",
        "//apis/org/openmcf/provider/azure/azureapplicationgateway/v1:azureapplicationgateway",
        "//apis/org/openmcf/provider/azure/azureapplicationinsights/v1:azureapplicationinsights",
        "//apis/org/openmcf/provider/azure/azurecontainerapp/v1:azurecontainerapp",
        "//apis/org/openmcf/provider/azure/azurecontainerappenvironment/v1:azurecontainerappenvironment",
        "//apis/org/openmcf/provider/azure/azurecontainerregistry/v1:azurecontainerregistry",
        "//apis/org/openmcf/provider/azure/azurecosmosdbaccount/v1:azurecosmosdbaccount",
        "//apis/org/openmcf/provider/azure/azurednsrecord/v1:azurednsrecord",
        "//apis/org/openmcf/provider/azure/azurednszone/v1:azurednszone",
        "//apis/org/openmcf/provider/azure/azureeventhubnamespace/v1:azureeventhubnamespace",
        "//apis/org/openmcf/provider/azure/azurefrontdoorprofile/v1:azurefrontdoorprofile",
        "//apis/org/openmcf/provider/azure/azurefunctionapp/v1:azurefunctionapp",
        "//apis/org/openmcf/provider/azure/azurekeyvault/v1:azurekeyvault",
        "//apis/org/openmcf/provider/azure/azurelinuxwebapp/v1:azurelinuxwebapp",
        "//apis/org/openmcf/provider/azure/azureloadbalancer/v1:azureloadbalancer",
        "//apis/org/openmcf/provider/azure/azureloganalyticsworkspace/v1:azureloganalyticsworkspace",
        "//apis/org/openmcf/provider/azure/azuremssqlserver/v1:azuremssqlserver",
        "//apis/org/openmcf/provider/azure/azuremysqlflexibleserver/v1:azuremysqlflexibleserver",
        "//apis/org/openmcf/provider/azure/azurenatgateway/v1:azurenatgateway",
        "//apis/org/openmcf/provider/azure/azurenetworksecuritygroup/v1:azurenetworksecuritygroup",
        "//apis/org/openmcf/provider/azure/azurepostgresqlflexibleserver/v1:azurepostgresqlflexibleserver",
        "//apis/org/openmcf/provider/azure/azureprivatednszone/v1:azureprivatednszone",
        "//apis/org/openmcf/provider/azure/azureprivateendpoint/v1:azureprivateendpoint",
        "//apis/org/openmcf/provider/azure/azurepublicip/v1:azurepublicip",
        "//apis/org/openmcf/provider/azure/azurerediscache/v1:azurerediscache",
        "//apis/org/openmcf/provider/azure/azureresourcegroup/v1:azureresourcegroup",
        "//apis/org/openmcf/provider/azure/azureservicebusnamespace/v1:azureservicebusnamespace",
        "//apis/org/openmcf/provider/azure/azureserviceplan/v1:azureserviceplan",
        "//apis/org/openmcf/provider/azure/azurestorageaccount/v1:azurestorageaccount",
        "//apis/org/openmcf/provider/azure/azuresubnet/v1:azuresubnet",
        "//apis/org/openmcf/provider/azure/azureuserassignedidentity/v1:azureuserassignedidentity",
        "//apis/org/openmcf/provider/azure/azurevirtualmachine/v1:azurevirtualmachine",
        "//apis/org/openmcf/provider/azure/azurevpc/v1:azurevpc",
        "//apis/org/openmcf/provider/civo/civobucket/v1:civobucket",
        "//apis/org/openmcf/provider/civo/civocertificate/v1:civocertificate",
        "//apis/org/openmcf/provider/civo/civocomputeinstance/v1:civocomputeinstance",
        "//apis/org/openmcf/provider/civo/civodatabase/v1:civodatabase",
        "//apis/org/openmcf/provider/civo/civodnsrecord/v1:civodnsrecord",
        "//apis/org/openmcf/provider/civo/civodnszone/v1:civodnszone",
        "//apis/org/openmcf/provider/civo/civofirewall/v1:civofirewall",
        "//apis/org/openmcf/provider/civo/civoipaddress/v1:civoipaddress",
        "//apis/org/openmcf/provider/civo/civokubernetescluster/v1:civokubernetescluster",
        "//apis/org/openmcf/provider/civo/civokubernetesnodepool/v1:civokubernetesnodepool",
        "//apis/org/openmcf/provider/civo/civovolume/v1:civovolume",
        "//apis/org/openmcf/provider/civo/civovpc/v1:civovpc",
        "//apis/org/openmcf/provider/cloudflare/cloudflared1database/v1:cloudflared1database",
        "//apis/org/openmcf/provider/cloudflare/cloudflarednsrecord/v1:cloudflarednsrecord",
        "//apis/org/openmcf/provider/cloudflare/cloudflarednszone/v1:cloudflarednszone",
        "//apis/org/openmcf/provider/cloudflare/cloudflarehyperdriveconfig/v1:cloudflarehyperdriveconfig",
        "//apis/org/openmcf/provider/cloudflare/cloudflarekvnamespace/v1:cloudflarekvnamespace",
        "//apis/org/openmcf/provider/cloudflare/cloudflareloadbalancer/v1:cloudflareloadbalancer",
        "//apis/org/openmcf/provider/cloudflare/cloudflareloadbalancermonitor/v1:cloudflareloadbalancermonitor",
        "//apis/org/openmcf/provider/cloudflare/cloudflareloadbalancerpool/v1:cloudflareloadbalancerpool",
        "//apis/org/openmcf/provider/cloudflare/cloudflarer2bucket/v1:cloudflarer2bucket",
        "//apis/org/openmcf/provider/cloudflare/cloudflareruleset/v1:cloudflareruleset",
        "//apis/org/openmcf/provider/cloudflare/cloudflareworker/v1:cloudflareworker",
        "//apis/org/openmcf/provider/cloudflare/cloudflareworkerskvpair/v1:cloudflareworkerskvpair",
        "//apis/org/openmcf/provider/cloudflare/cloudflarezerotrustaccessapplication/v1:cloudflarezerotrustaccessapplication",
        "//apis/org/openmcf/provider/confluent/confluentkafka/v1:confluentkafka",
        "//apis/org/openmcf/provider/digitalocean/digitaloceanappplatformservice/v1:digitaloceanappplatformservice",
        "//apis/org/openmcf/provider/digitalocean/digitaloceanbucket/v1:digitaloceanbucket",
        "//apis/org/openmcf/provider/digitalocean/digitaloceancertificate/v1:digitaloceancertificate",
        "//apis/org/openmcf/provider/digitalocean/digitaloceancontainerregistry/v1:digitaloceancontainerregistry",
        "//apis/org/openmcf/provider/digitalocean/digitaloceandatabasecluster/v1:digitaloceandatabasecluster",
        "//apis/org/openmcf/provider/digitalocean/digitaloceandnsrecord/v1:digitaloceandnsrecord",
        "//apis/org/openmcf/provider/digitalocean/digitaloceandnszone/v1:digitaloceandnszone",
        "//apis/org/openmcf/provider/digitalocean/digitaloceandroplet/v1:digitaloceandroplet",
        "//apis/org/openmcf/provider/digitalocean/digitaloceanfirewall/v1:digitaloceanfirewall",
        "//apis/org/openmcf/provider/digitalocean/digitaloceanfunction/v1:digitaloceanfunction",
        "//apis/org/openmcf/provider/digitalocean/digitaloceankubernetescluster/v1:digitaloceankubernetescluster",
        "//apis/org/openmcf/provider/digitalocean/digitaloceankubernetesnodepool/v1:digitaloceankubernetesnodepool",
        "//apis/org/openmcf/provider/digitalocean/digitaloceanloadbalancer/v1:digitaloceanloadbalancer",
        "//apis/org/openmcf/provider/digitalocean/digitaloceanvolume/v1:digitaloceanvolume",
        "//apis/org/openmcf/provider/digitalocean/digitaloceanvpc/v1:digitaloceanvpc",
        "//apis/org/openmcf/provider/gcp/gcpalloydbcluster/v1:gcpalloydbcluster",
        "//apis/org/openmcf/provider/gcp/gcpartifactregistryrepo/v1:gcpartifactregistryrepo",
        "//apis/org/openmcf/provider/gcp/gcpbigquerydataset/v1:gcpbigquerydataset",
        "//apis/org/openmcf/provider/gcp/gcpbigtableinstance/v1:gcpbigtableinstance",
        "//apis/org/openmcf/provider/gcp/gcpcertmanagercert/v1:gcpcertmanagercert",
        "//apis/org/openmcf/provider/gcp/gcpcloudarmorpolicy/v1:gcpcloudarmorpolicy",
        "//apis/org/openmcf/provider/gcp/gcpcloudcdn/v1:gcpcloudcdn",
        "//apis/org/openmcf/provider/gcp/gcpcloudcomposerenvironment/v1:gcpcloudcomposerenvironment",
        "//apis/org/openmcf/provider/gcp/gcpcloudfunction/v1:gcpcloudfunction",
        "//apis/org/openmcf/provider/gcp/gcpcloudrun/v1:gcpcloudrun",
        "//apis/org/openmcf/provider/gcp/gcpcloudschedulerjob/v1:gcpcloudschedulerjob",
        "//apis/org/openmcf/provider/gcp/gcpcloudsql/v1:gcpcloudsql",
        "//apis/org/openmcf/provider/gcp/gcpcloudtasksqueue/v1:gcpcloudtasksqueue",
        "//apis/org/openmcf/provider/gcp/gcpcomputeinstance/v1:gcpcomputeinstance",
        "//apis/org/openmcf/provider/gcp/gcpdataproccluster/v1:gcpdataproccluster",
        "//apis/org/openmcf/provider/gcp/gcpdataprocvirtualcluster/v1:gcpdataprocvirtualcluster",
        "//apis/org/openmcf/provider/gcp/gcpdnsrecord/v1:gcpdnsrecord",
        "//apis/org/openmcf/provider/gcp/gcpdnszone/v1:gcpdnszone",
        "//apis/org/openmcf/provider/gcp/gcpfilestoreinstance/v1:gcpfilestoreinstance",
        "//apis/org/openmcf/provider/gcp/gcpfirestoredatabase/v1:gcpfirestoredatabase",
        "//apis/org/openmcf/provider/gcp/gcpfirewallrule/v1:gcpfirewallrule",
        "//apis/org/openmcf/provider/gcp/gcpgcsbucket/v1:gcpgcsbucket",
        "//apis/org/openmcf/provider/gcp/gcpgkecluster/v1:gcpgkecluster",
        "//apis/org/openmcf/provider/gcp/gcpgkenodepool/v1:gcpgkenodepool",
        "//apis/org/openmcf/provider/gcp/gcpgkeworkloadidentitybinding/v1:gcpgkeworkloadidentitybinding",
        "//apis/org/openmcf/provider/gcp/gcpglobaladdress/v1:gcpglobaladdress",
        "//apis/org/openmcf/provider/gcp/gcpkmskey/v1:gcpkmskey",
        "//apis/org/openmcf/provider/gcp/gcpkmskeyring/v1:gcpkmskeyring",
        "//apis/org/openmcf/provider/gcp/gcpmemorystoreinstance/v1:gcpmemorystoreinstance",
        "//apis/org/openmcf/provider/gcp/gcpproject/v1:gcpproject",
        "//apis/org/openmcf/provider/gcp/gcppubsubsubscription/v1:gcppubsubsubscription",
        "//apis/org/openmcf/provider/gcp/gcppubsubtopic/v1:gcppubsubtopic",
        "//apis/org/openmcf/provider/gcp/gcpredisinstance/v1:gcpredisinstance",
        "//apis/org/openmcf/provider/gcp/gcprouternat/v1:gcprouternat",
        "//apis/org/openmcf/provider/gcp/gcpsecretsmanager/v1:gcpsecretsmanager",
        "//apis/org/openmcf/provider/gcp/gcpserviceaccount/v1:gcpserviceaccount",
        "//apis/org/openmcf/provider/gcp/gcpspannerdatabase/v1:gcpspannerdatabase",
        "//apis/org/openmcf/provider/gcp/gcpspannerinstance/v1:gcpspannerinstance",
        "//apis/org/openmcf/provider/gcp/gcpsubnetwork/v1:gcpsubnetwork",
        "//apis/org/openmcf/provider/gcp/gcpvertexaiendpoint/v1:gcpvertexaiendpoint",
        "//apis/org/openmcf/provider/gcp/gcpvertexainotebook/v1:gcpvertexainotebook",
        "//apis/org/openmcf/provider/gcp/gcpvpc/v1:gcpvpc",
        "//apis/org/openmcf/provider/hetznercloud/hetznercloudcertificate/v1:hetznercloudcertificate",
        "//apis/org/openmcf/provider/hetznercloud/hetznerclouddnszone/v1:hetznerclouddnszone",
        "//apis/org/openmcf/provider/hetznercloud/hetznercloudfirewall/v1:hetznercloudfirewall",
        "//apis/org/openmcf/provider/hetznercloud/hetznercloudfloatingip/v1:hetznercloudfloatingip",
        "//apis/org/openmcf/provider/hetznercloud/hetznercloudloadbalancer/v1:hetznercloudloadbalancer",
        "//apis/org/openmcf/provider/hetznercloud/hetznercloudnetwork/v1:hetznercloudnetwork",
        "//apis/org/openmcf/provider/hetznercloud/hetznercloudplacementgroup/v1:hetznercloudplacementgroup",
        "//apis/org/openmcf/provider/hetznercloud/hetznercloudprimaryip/v1:hetznercloudprimaryip",
        "//apis/org/openmcf/provider/hetznercloud/hetznercloudserver/v1:hetznercloudserver",
        "//apis/org/openmcf/provider/hetznercloud/hetznercloudsnapshot/v1:hetznercloudsnapshot",
        "//apis/org/openmcf/provider/hetznercloud/hetznercloudsshkey/v1:hetznercloudsshkey",
        "//apis/org/openmcf/provider/hetznercloud/hetznercloudvolume/v1:hetznercloudvolume",
        "//apis/org/openmcf/provider/kubernetes/kubernetesaltinityoperator/v1:kubernetesaltinityoperator",
        "//apis/org/openmcf/provider/kubernetes/kubernetesargocd/v1:kubernetesargocd",
        "//apis/org/openmcf/provider/kubernetes/kubernetesauthorizationpolicy/v1:kubernetesauthorizationpolicy",
        "//apis/org/openmcf/provider/kubernetes/kubernetescertificate/v1:kubernetescertificate",
        "//apis/org/openmcf/provider/kubernetes/kubernetescertmanager/v1:kubernetescertmanager",
        "//apis/org/openmcf/provider/kubernetes/kubernetesclickhouse/v1:kubernetesclickhouse",
        "//apis/org/openmcf/provider/kubernetes/kubernetesclusterissuer/v1:kubernetesclusterissuer",
        "//apis/org/openmcf/provider/kubernetes/kubernetescronjob/v1:kubernetescronjob",
        "//apis/org/openmcf/provider/kubernetes/kubernetesdaemonset/v1:kubernetesdaemonset",
        "//apis/org/openmcf/provider/kubernetes/kubernetesdeployment/v1:kubernetesdeployment",
        "//apis/org/openmcf/provider/kubernetes/kubernetesdestinationrule/v1:kubernetesdestinationrule",
        "//apis/org/openmcf/provider/kubernetes/kuberneteselasticoperator/v1:kuberneteselasticoperator",
        "//apis/org/openmcf/provider/kubernetes/kuberneteselasticsearch/v1:kuberneteselasticsearch",
        "//apis/org/openmcf/provider/kubernetes/kubernetesenvoyfilter/v1:kubernetesenvoyfilter",
        "//apis/org/openmcf/provider/kubernetes/kubernetesexternaldns/v1:kubernetesexternaldns",
        "//apis/org/openmcf/provider/kubernetes/kubernetesexternalsecrets/v1:kubernetesexternalsecrets",
        "//apis/org/openmcf/provider/kubernetes/kubernetesgateway/v1:kubernetesgateway",
        "//apis/org/openmcf/provider/kubernetes/kubernetesgatewayapicrds/v1:kubernetesgatewayapicrds",
        "//apis/org/openmcf/provider/kubernetes/kubernetesgatewayclass/v1:kubernetesgatewayclass",
        "//apis/org/openmcf/provider/kubernetes/kubernetesgharunnerscaleset/v1:kubernetesgharunnerscaleset",
        "//apis/org/openmcf/provider/kubernetes/kubernetesgharunnerscalesetcontroller/v1:kubernetesgharunnerscalesetcontroller",
        "//apis/org/openmcf/provider/kubernetes/kubernetesgitlab/v1:kubernetesgitlab",
        "//apis/org/openmcf/provider/kubernetes/kubernetesgrafana/v1:kubernetesgrafana",
        "//apis/org/openmcf/provider/kubernetes/kubernetesgrpcroute/v1:kubernetesgrpcroute",
        "//apis/org/openmcf/provider/kubernetes/kubernetesharbor/v1:kubernetesharbor",
        "//apis/org/openmcf/provider/kubernetes/kuberneteshelmrelease/v1:kuberneteshelmrelease",
        "//apis/org/openmcf/provider/kubernetes/kuberneteshttproute/v1:kuberneteshttproute",
        "//apis/org/openmcf/provider/kubernetes/kubernetesingressnginx/v1:kubernetesingressnginx",
        "//apis/org/openmcf/provider/kubernetes/kubernetesissuer/v1:kubernetesissuer",
        "//apis/org/openmcf/provider/kubernetes/kubernetesistio/v1:kubernetesistio",
        "//apis/org/openmcf/provider/kubernetes/kubernetesistiobasecrds/v1:kubernetesistiobasecrds",
        "//apis/org/openmcf/provider/kubernetes/kubernetesjenkins/v1:kubernetesjenkins",
        "//apis/org/openmcf/provider/kubernetes/kubernetesjob/v1:kubernetesjob",
        "//apis/org/openmcf/provider/kubernetes/kuberneteskafka/v1:kuberneteskafka",
        "//apis/org/openmcf/provider/kubernetes/kuberneteskeycloak/v1:kuberneteskeycloak",
        "//apis/org/openmcf/provider/kubernetes/kuberneteslocust/v1:kuberneteslocust",
        "//apis/org/openmcf/provider/kubernetes/kubernetesmanifest/v1:kubernetesmanifest",
        "//apis/org/openmcf/provider/kubernetes/kubernetesmongodb/v1:kubernetesmongodb",
        "//apis/org/openmcf/provider/kubernetes/kubernetesnamespace/v1:kubernetesnamespace",
        "//apis/org/openmcf/provider/kubernetes/kubernetesnats/v1:kubernetesnats",
        "//apis/org/openmcf/provider/kubernetes/kubernetesneo4j/v1:kubernetesneo4j",
        "//apis/org/openmcf/provider/kubernetes/kubernetesopenbao/v1:kubernetesopenbao",
        "//apis/org/openmcf/provider/kubernetes/kubernetesopenfga/v1:kubernetesopenfga",
        "//apis/org/openmcf/provider/kubernetes/kubernetespeerauthentication/v1:kubernetespeerauthentication",
        "//apis/org/openmcf/provider/kubernetes/kubernetesperconamongooperator/v1:kubernetesperconamongooperator",
        "//apis/org/openmcf/provider/kubernetes/kubernetesperconamysqloperator/v1:kubernetesperconamysqloperator",
        "//apis/org/openmcf/provider/kubernetes/kubernetesperconapostgresoperator/v1:kubernetesperconapostgresoperator",
        "//apis/org/openmcf/provider/kubernetes/kubernetespostgres/v1:kubernetespostgres",
        "//apis/org/openmcf/provider/kubernetes/kubernetesprometheus/v1:kubernetesprometheus",
        "//apis/org/openmcf/provider/kubernetes/kubernetesredis/v1:kubernetesredis",
        "//apis/org/openmcf/provider/kubernetes/kubernetesreferencegrant/v1:kubernetesreferencegrant",
        "//apis/org/openmcf/provider/kubernetes/kubernetesrequestauthentication/v1:kubernetesrequestauthentication",
        "//apis/org/openmcf/provider/kubernetes/kubernetesrookcephcluster/v1:kubernetesrookcephcluster",
        "//apis/org/openmcf/provider/kubernetes/kubernetesrookcephoperator/v1:kubernetesrookcephoperator",
        "//apis/org/openmcf/provider/kubernetes/kubernetessecret/v1:kubernetessecret",
        "//apis/org/openmcf/provider/kubernetes/kubernetesservice/v1:kubernetesservice",
        "//apis/org/openmcf/provider/kubernetes/kubernetesserviceentry/v1:kubernetesserviceentry",
        "//apis/org/openmcf/provider/kubernetes/kubernetessignoz/v1:kubernetessignoz",
        "//apis/org/openmcf/provider/kubernetes/kubernetessolr/v1:kubernetessolr",
        "//apis/org/openmcf/provider/kubernetes/kubernetessolroperator/v1:kubernetessolroperator",
        "//apis/org/openmcf/provider/kubernetes/kubernetesstatefulset/v1:kubernetesstatefulset",
        "//apis/org/openmcf/provider/kubernetes/kubernetesstrimzikafkaoperator/v1:kubernetesstrimzikafkaoperator",
        "//apis/org/openmcf/provider/kubernetes/kubernetestcproute/v1:kubernetestcproute",
        "//apis/org/openmcf/provider/kubernetes/kubernetestekton/v1:kubernetestekton",
        "//apis/org/openmcf/provider/kubernetes/kubernetestektonoperator/v1:kubernetestektonoperator",
        "//apis/org/openmcf/provider/kubernetes/kubernetestelemetry/v1:kubernetestelemetry",
        "//apis/org/openmcf/provider/kubernetes/kubernetestemporal/v1:kubernetestemporal",
        "//apis/org/openmcf/provider/kubernetes/kubernetestlsroute/v1:kubernetestlsroute",
        "//apis/org/openmcf/provider/kubernetes/kuberneteszalandopostgresoperator/v1:kuberneteszalandopostgresoperator",
        "//apis/org/openmcf/provider/oci/ocialarm/v1:ocialarm",
        "//apis/org/openmcf/provider/oci/ociapigateway/v1:ociapigateway",
        "//apis/org/openmcf/provider/oci/ociapplicationloadbalancer/v1:ociapplicationloadbalancer",
        "//apis/org/openmcf/provider/oci/ociautonomousdatabase/v1:ociautonomousdatabase",
        "//apis/org/openmcf/provider/oci/ocibastion/v1:ocibastion",
        "//apis/org/openmcf/provider/oci/ociblockvolume/v1:ociblockvolume",
        "//apis/org/openmcf/provider/oci/ocicompartment/v1:ocicompartment",
        "//apis/org/openmcf/provider/oci/ocicomputeinstance/v1:ocicomputeinstance",
        "//apis/org/openmcf/provider/oci/ocicontainerenginecluster/v1:ocicontainerenginecluster",
        "//apis/org/openmcf/provider/oci/ocicontainerenginenodepool/v1:ocicontainerenginenodepool",
        "//apis/org/openmcf/provider/oci/ocicontainerinstance/v1:ocicontainerinstance",
        "//apis/org/openmcf/provider/oci/ocidbsystem/v1:ocidbsystem",
        "//apis/org/openmcf/provider/oci/ocidevopsproject/v1:ocidevopsproject",
        "//apis/org/openmcf/provider/oci/ocidnsrecord/v1:ocidnsrecord",
        "//apis/org/openmcf/provider/oci/ocidnszone/v1:ocidnszone",
        "//apis/org/openmcf/provider/oci/ocidynamicgroup/v1:ocidynamicgroup",
        "//apis/org/openmcf/provider/oci/ocidynamicroutinggateway/v1:ocidynamicroutinggateway",
        "//apis/org/openmcf/provider/oci/ocifilesystem/v1:ocifilesystem",
        "//apis/org/openmcf/provider/oci/ocifunctionsapplication/v1:ocifunctionsapplication",
        "//apis/org/openmcf/provider/oci/ociidentitypolicy/v1:ociidentitypolicy",
        "//apis/org/openmcf/provider/oci/ocikmskey/v1:ocikmskey",
        "//apis/org/openmcf/provider/oci/ocikmsvault/v1:ocikmsvault",
        "//apis/org/openmcf/provider/oci/ociloggroup/v1:ociloggroup",
        "//apis/org/openmcf/provider/oci/ocimysqldbsystem/v1:ocimysqldbsystem",
        "//apis/org/openmcf/provider/oci/ocinetworkfirewall/v1:ocinetworkfirewall",
        "//apis/org/openmcf/provider/oci/ocinetworkloadbalancer/v1:ocinetworkloadbalancer",
        "//apis/org/openmcf/provider/oci/ocinosqltable/v1:ocinosqltable",
        "//apis/org/openmcf/provider/oci/ociobjectstoragebucket/v1:ociobjectstoragebucket",
        "//apis/org/openmcf/provider/oci/ocipostgresqldbsystem/v1:ocipostgresqldbsystem",
        "//apis/org/openmcf/provider/oci/ocipublicip/v1:ocipublicip",
        "//apis/org/openmcf/provider/oci/ociqueue/v1:ociqueue",
        "//apis/org/openmcf/provider/oci/ocirediscluster/v1:ocirediscluster",
        "//apis/org/openmcf/provider/oci/ocisecuritygroup/v1:ocisecuritygroup",
        "//apis/org/openmcf/provider/oci/ocistreampool/v1:ocistreampool",
        "//apis/org/openmcf/provider/oci/ocisubnet/v1:ocisubnet",
        "//apis/org/openmcf/provider/oci/ocivaultsecret/v1:ocivaultsecret",
        "//apis/org/openmcf/provider/oci/ocivcn/v1:ocivcn",
        "//apis/org/openmcf/provider/openfga/openfgaauthorizationmodel/v1:openfgaauthorizationmodel",
        "//apis/org/openmcf/provider/openfga/openfgarelationshiptuple/v1:openfgarelationshiptuple",
        "//apis/org/openmcf/provider/openfga/openfgastore/v1:openfgastore",
        "//apis/org/openmcf/provider/openstack/openstackapplicationcredential/v1:openstackapplicationcredential",
        "//apis/org/openmcf/provider/openstack/openstackdnsrecord/v1:openstackdnsrecord",
        "//apis/org/openmcf/provider/openstack/openstackdnszone/v1:openstackdnszone",
        "//apis/org/openmcf/provider/openstack/openstackfloatingip/v1:openstackfloatingip",
        "//apis/org/openmcf/provider/openstack/openstackfloatingipassociate/v1:openstackfloatingipassociate",
        "//apis/org/openmcf/provider/openstack/openstackimage/v1:openstackimage",
        "//apis/org/openmcf/provider/openstack/openstackinstance/v1:openstackinstance",
        "//apis/org/openmcf/provider/openstack/openstackkeypair/v1:openstackkeypair",
        "//apis/org/openmcf/provider/openstack/openstackloadbalancer/v1:openstackloadbalancer",
        "//apis/org/openmcf/provider/openstack/openstackloadbalancerlistener/v1:openstackloadbalancerlistener",
        "//apis/org/openmcf/provider/openstack/openstackloadbalancermember/v1:openstackloadbalancermember",
        "//apis/org/openmcf/provider/openstack/openstackloadbalancermonitor/v1:openstackloadbalancermonitor",
        "//apis/org/openmcf/provider/openstack/openstackloadbalancerpool/v1:openstackloadbalancerpool",
        "//apis/org/openmcf/provider/openstack/openstacknetwork/v1:openstacknetwork",
        "//apis/org/openmcf/provider/openstack/openstacknetworkport/v1:openstacknetworkport",
        "//apis/org/openmcf/provider/openstack/openstackproject/v1:openstackproject",
        "//apis/org/openmcf/provider/openstack/openstackroleassignment/v1:openstackroleassignment",
        "//apis/org/openmcf/provider/openstack/openstackrouter/v1:openstackrouter",
        "//apis/org/openmcf/provider/openstack/openstackrouterinterface/v1:openstackrouterinterface",
        "//apis/org/openmcf/provider/openstack/openstacksecuritygroup/v1:openstacksecuritygroup",
        "//apis/org/openmcf/provider/openstack/openstacksecuritygrouprule/v1:openstacksecuritygrouprule",
        "//apis/org/openmcf/provider/openstack/openstackservergroup/v1:openstackservergroup",
        "//apis/org/openmcf/provider/openstack/openstacksubnet/v1:openstacksubnet",
        "//apis/org/openmcf/provider/openstack/openstackvolume/v1:openstackvolume",
        "//apis/org/openmcf/provider/openstack/openstackvolumeattach/v1:openstackvolumeattach",
        "//apis/org/openmcf/provider/scaleway/scalewayblockvolume/v1:scalewayblockvolume",
        "//apis/org/openmcf/provider/scaleway/scalewaycontainerregistry/v1:scalewaycontainerregistry",
        "//apis/org/openmcf/provider/scaleway/scalewaydnsrecord/v1:scalewaydnsrecord",
        "//apis/org/openmcf/provider/scaleway/scalewaydnszone/v1:scalewaydnszone",
        "//apis/org/openmcf/provider/scaleway/scalewayinstance/v1:scalewayinstance",
        "//apis/org/openmcf/provider/scaleway/scalewayinstancesecuritygroup/v1:scalewayinstancesecuritygroup",
        "//apis/org/openmcf/provider/scaleway/scalewaykapsulecluster/v1:scalewaykapsulecluster",
        "//apis/org/openmcf/provider/scaleway/scalewaykapsulepool/v1:scalewaykapsulepool",
        "//apis/org/openmcf/provider/scaleway/scalewayloadbalancer/v1:scalewayloadbalancer",
        "//apis/org/openmcf/provider/scaleway/scalewaymongodbinstance/v1:scalewaymongodbinstance",
        "//apis/org/openmcf/provider/scaleway/scalewayobjectbucket/v1:scalewayobjectbucket",
        "//apis/org/openmcf/provider/scaleway/scalewayprivatenetwork/v1:scalewayprivatenetwork",
        "//apis/org/openmcf/provider/scaleway/scalewaypublicgateway/v1:scalewaypublicgateway",
        "//apis/org/openmcf/provider/scaleway/scalewayrdbinstance/v1:scalewayrdbinstance",
        "//apis/org/openmcf/provider/scaleway/scalewayrediscluster/v1:scalewayrediscluster",
        "//apis/org/openmcf/provider/scaleway/scalewayserverlesscontainer/v1:scalewayserverlesscontainer",
        "//apis/org/openmcf/provider/scaleway/scalewayserverlessfunction/v1:scalewayserverlessfunction",
        "//apis/org/openmcf/provider/scaleway/scalewayvpc/v1:scalewayvpc",
        "//apis/org/openmcf/provider/snowflake/snowflakedatabase/v1:snowflakedatabase",
        "//apis/org/openmcf/shared/cloudresourcekind",
        "//pkg/apis/gvk",
        "@com_github_pkg_errors//:errors",
        "@com_github_sirupsen_logrus//:logrus",
        "@in_gopkg_yaml_v3//:yaml_v3",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//reflect/protoreflect",
    ],
)

go_test(
    name = "crkreflect_test",
    srcs = [
        "kind_by_id_prefix_test.go",
        "kind_from_string_test.go",
        "prerequisites_test.go",
    ],
    embed = [":crkreflect"],
    deps = ["//apis/org/openmcf/shared/cloudresourcekind"],
)
